--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -10,12 +10,16 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'tech.jackywang:greenbean-pods-plugin:0.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 allprojects {
+
+    apply plugin: 'greenbean-pods-plugin'
+
     repositories {
         google()
         jcenter()
