--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -5,12 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'tech.jackywang:greenbean-pods-plugin:0.0.1'
+        classpath "tech.jackywang:greenbean-pods-plugin:${greenbean_pods_version}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -23,7 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
